Make class thread safe.